<resources>
    <string name="app_name">Player</string>

    <!--Authentication-->
    <string name="auth_failed">Box authentication failed.</string>

    <!--Portal Page-->
    <string name="connected">Connected</string>
    <string name="add_portal">Add Portal</string>
    <string name="portals">LIVE PORTALS</string>
    <string name="quick_insert">Quick Code</string>


    <!--Edit Page-->
    <string name="enter_your_name">Enter your portal name</string>
    <string name="enter_your_url">Enter your portal url</string>
    <string name="require_login">Login required?</string>
    <string name="enter_user_id">Enter your ID</string>
    <string name="enter_user_password">Enter your password</string>

    <string name="epg_mode">EPG Mode</string>
    <string name="epg_offset">EPG Offset</string>
    <string name="group_channel_numbering">Group Channel Numbering</string>
    <string name="mac_type">MAC Type</string>

    <!--Connect Portal-->
    <string name="quick_insert_message">Insert Code</string>
    <string name="action_connect">Connect</string>
    <string name="action_reload">Reload</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="loading">Loading…</string>
    <string name="start_download">Downloading Data…</string>

    <!--Banner-->
    <string name="banner_record">Record</string>
    <string name="banner_fav">Favorite</string>
    <string name="banner_lock">Lock</string>
    <string name="banner_av">Audio/Video</string>

    <string name="banner_single_epg">Single EPG</string>
    <string name="banner_detail" translatable="false">Program Information</string>
    <string name="banner_search" translatable="false">Search</string>

    <string name="audio_video">Audio</string>


    <!--Menu-->
    <string name="live_tv">Live TV</string>
    <string name="vod">VOD</string>
    <string name="tv_series">TV Series</string>
    <string name="recordings">Recordings</string>
    <string name="schedules">Schedule</string>
    <string name="portal">Portal</string>
    <string name="setting">Settings</string>
    <string name="exit_text_1">Exit</string>
    <string name="exit_text_2">Are you sure you want to exit?</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>


    <!--Messages-->
    <string name="recording_no_usb">The recording feature requires external storage (USB) </string>
    <string name="no_data">No Data Found</string>



    <string name="settings_portal_information">Portal information</string>
    <string name="settings_box_information">Box information</string>
    <string name="settings_parental_pin">Change Parental PIN</string>
    <string name="new_password">Input New Password</string>
    <string name="repeat_password">Confirm new password</string>
    <string name="banner_osd_timeout">Banner OSD Timeout</string>
    <string name="parental_title">Enter Pin</string>
    <string name="parental_hint">PASSWORD</string>
    <string name="parental_positive">Continue</string>
    <string name="parental_negative">Close</string>

    <string name="current_program" translatable="false">Program Information</string>
    <string name="search_hint" translatable="false">Search a channel name</string>
    <string name="sort_a_z" translatable="false">Sort by Name</string>
    <string name="sort_num" translatable="false">Sort by Number</string>
    <string name="category_keyguide_movetotop" translatable="false">Move to top</string>
    <string name="category_keyguide_movetobottom" translatable="false">Move to bottom</string>

    <string-array name="osd_array">
        <item>3 Seconds</item>
        <item>5 Seconds</item>
        <item>7 Seconds</item>
        <item>15 Seconds</item>
        <item>20 Seconds</item>
    </string-array>

    <string-array name="osd_values">
        <item>3000</item>
        <item>5000</item>
        <item>7000</item>
        <item>15000</item>
        <item>20000</item>
    </string-array>
</resources>