<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.gi.hybridplayer.viewmodel.SearchResultViewModel" />
        <variable
            name="listener"
            type="com.gi.hybridplayer.view.SearchResultAdapter.Listener" />

    </data>
    <androidx.cardview.widget.CardView
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        tools:layout_width = "420dp"
        tools:layout_height = "520dp"
        app:cardBackgroundColor="@color/lb_default_brand_color"
        app:contentPadding="10dp"
        >
        <EditText
            android:id="@+id/search_input"
            android:layout_width = "match_parent"
            android:layout_height = "50dp"
            android:inputType = "text"
            android:padding="10dp"
            android:hint = "@string/search_hint"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result"
            android:layout_width = "match_parent"
            android:layout_height = "425dp"
            android:layout_marginTop = "50dp"
            app:result="@{viewmodel.result}"
            app:onItemClickListener="@{listener}"
            />
        <ImageView
            android:layout_width="21dp"
            android:layout_height = "21dp"
            android:layout_marginBottom = "2dp"
            android:layout_marginStart = "2dp"
            android:layout_gravity = "bottom"
            android:src="@drawable/programguide_button_background"
            android:tint = "#E10000"
            tools:tint = "#E10000"
            tools:ignore="UseAppTint" />
        <TextView
            android:layout_width="100dp"
            android:layout_height = "25dp"
            android:layout_marginStart = "25dp"
            android:paddingStart="4dp"
            android:layout_gravity="bottom"
            android:text="@string/sort_a_z"
            tools:ignore="RtlSymmetry" />
        <ImageView
            android:layout_width="21dp"
            android:layout_height = "21dp"
            android:layout_marginBottom = "2dp"
            android:layout_marginStart = "125dp"
            android:layout_gravity = "bottom"
            android:src="@drawable/programguide_button_background"
            android:tint = "#00E100"
            tools:tint = "#00E100"
            tools:ignore="UseAppTint" />
        <TextView
            android:layout_width="100dp"
            android:layout_height = "25dp"
            android:layout_marginStart = "150dp"
            android:layout_gravity="bottom"
            android:text="@string/sort_num"
            />



    </androidx.cardview.widget.CardView>

</layout>